--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
 BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=amp_cm5w354fd02qm10kqws1o1e76
-DB_NAME=my-db
-DB_PASSWORD=admin
+DB_NAME=postgres
+DB_PASSWORD=tranthanhdat
 DB_PORT=5432
-DB_URL=postgres://admin:admin@localhost:5432/my-db
-DB_USER=admin
+DB_URL=postgresql://postgres:tranthanhdat@localhost:5432/postgres
+DB_USER=postgres
 JWT_EXPIRATION=2d
 JWT_SECRET_KEY=Change_ME!!!
 PORT=3000
